Cambio del color del globo

--- a/frontend/src/styles/GloboCursos.css
+++ b/frontend/src/styles/GloboCursos.css
@@ -27,7 +27,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #444;
+  border-bottom: 1px solid #4ac3d3;
   padding-bottom: 0.5rem;
   margin-bottom: 1rem;
 }
